# django-nexgensis-forms

./: .gitignore  CHANGELOG.md  FUNCTIONALITY_REVIEW.md  LICENSE  MANIFEST.in  PRODUCTION_CHECKLIST.md  README.md  STATUS.md  minimal_django_settings.py  pyproject.toml  requirements.txt  setup.py
nexgensis_forms/: __init__.py  admin.py  apps.py  base_models.py  conf.py  models.py  urls.py  utils.py
nexgensis_forms/migrations/: 0001_initial.py
nexgensis_forms/serializers/: __init__.py  criteria_serializers.py  data_type_serializers.py  field_type_serializers.py  focus_area_serializers.py  form_design_serializers.py  form_type_serializers.py  main_process_serializers.py
nexgensis_forms/services/: bulk_upload_forms_services.py
nexgensis_forms/views/: bulk_upload_forms_views.py  criteria_views.py  data_type_views.py  field_type_views.py  focus_area_views.py  form_design_views.py  form_draft_views.py  form_type_views.py  form_views.py  main_process_views.py
nexgensis_forms/views/swagger/: __init__.py  criteria_swagger.py  data_type_swagger.py  field_type_swagger.py  focus_area_swagger.py  form_design_swagger.py  form_draft_swagger.py  form_type_swagger.py  form_views_swagger.py  main_process_swagger.py
